# app/Http/Controllers/AirportController.php
@@ -3,7 +3,6 @@
 namespace App\Http\Controllers;
 
 use App\Repositories\AirportRepositoryInterface;
-use Illuminate\Http\Request;
 
 class AirportController extends Controller
 {
@@ -15,7 +14,15 @@ class AirportController extends Controller
     }
 
     /**
-     * Display a listing of the resource.
+     * @OA\Get(
+     *      path="/api/airports",
+     *      operationId="getAirportsList",
+     *      tags={"Airports"},
+     *      summary="Get list of airports",
+     *      description="Returns list of airports",
+     *      @OA\Response(response=200, description="Successful operation"),
+     *      @OA\Response(response=400, description="Bad request")
+     * )
      */
     public function index()
     {
